# prime1

./: Cargo.toml
src/: main.rs  utils.rs
src/utils/: file.rs  lucas_lehmer.rs  perfect_num.rs  prime.rs
